--- a/YCBG_HeQtCSDL/YCBG_HeQtCSDL/App.xaml
+++ b/YCBG_HeQtCSDL/YCBG_HeQtCSDL/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:YCBG_HeQtCSDL"
-             StartupUri="MainWindow.xaml">
+             StartupUri="main_YCBG.xaml">
     <Application.Resources>
          
     </Application.Resources>
