--- a/YCBG_HeQtCSDL/YCBG_HeQtCSDL/ThemSanPhamYCBG.xaml
+++ b/YCBG_HeQtCSDL/YCBG_HeQtCSDL/ThemSanPhamYCBG.xaml
@@ -20,7 +20,8 @@
             <ColumnDefinition Width="160*"/>
         </Grid.ColumnDefinitions>
         <TextBox Name="ahihi" Grid.Row="0" Grid.ColumnSpan="2" BorderBrush="Red" BorderThickness="1" Margin="5"></TextBox>
-        <Button Grid.Row="1" Grid.Column="3"
+        <Button Grid.Row="1" Grid.Column="3" Name="btn_addYCBG"
+                Click="btn_addYCBG_Click"
                     BorderBrush="Red" BorderThickness="1" Margin="5">Thêm</Button>
 
         <DataGrid Name="dtgThemSanPhamYCBG"
@@ -28,12 +29,11 @@
                               ColumnWidth="*"
                               VerticalAlignment="Stretch"
                               HorizontalAlignment="Stretch"
-                              AutoGenerateColumns="False"
                               EnableColumnVirtualization="False"
                               EnableRowVirtualization="False"
-                              CanUserAddRows="False"
+                              AutoGenerateColumns="False"
+                              CanUserAddRows="True"
                               Margin="5"
-                                
                               SelectionMode="Single" Grid.RowSpan="1">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="#" IsReadOnly="True" Width="30" Binding="{Binding RelativeSource={RelativeSource AncestorType=DataGridRow}, Converter={local1:RowToIndexConverter}}"/>
