--- a/YCBG_HeQtCSDL/YCBG_HeQtCSDL/login.xaml
+++ b/YCBG_HeQtCSDL/YCBG_HeQtCSDL/login.xaml
@@ -7,8 +7,8 @@
         mc:Ignorable="d"
         Title="login" Height="450" Width="800">
     <Grid>
-        <TextBox Name="username" HorizontalAlignment="Left" Height="23" Margin="357,125,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <TextBox Name="password" HorizontalAlignment="Left" Height="23" Margin="357,177,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox Text="duy" Name="username" HorizontalAlignment="Left" Height="23" Margin="357,125,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox Text="123" Name="password" HorizontalAlignment="Left" Height="23" Margin="357,177,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Button Name="Login" Content="Login" HorizontalAlignment="Left" Margin="375,229,0,0" VerticalAlignment="Top" Width="75" Click="Login_Click"/>
     </Grid>
 </Window>
