--- a/YCBG_HeQtCSDL/YCBG_HeQtCSDL/ThemSanPhamYCBG.xaml
+++ b/YCBG_HeQtCSDL/YCBG_HeQtCSDL/ThemSanPhamYCBG.xaml
@@ -31,6 +31,8 @@
                   SelectionChanged="cboMaNCC_SelectionChanged"
                   SelectedIndex="{Binding indexCboNCC}"/>
         <TextBox Name="txtSoLuong" Grid.Column="2" Grid.Row="1"
+                 MaxLength="5"
+                 PreviewTextInput="txtSoLuong_PreviewTextInput"
                     Margin="10" Background="Azure" Text="0"
                  BorderBrush="Red" BorderThickness="1"
                  />
