--- a/YCBG_HeQtCSDL/YCBG_HeQtCSDL/main_YCBG.xaml
+++ b/YCBG_HeQtCSDL/YCBG_HeQtCSDL/main_YCBG.xaml
@@ -20,7 +20,11 @@
                 <ColumnDefinition Width="577*"/>
                 <ColumnDefinition Width="160*"/>
             </Grid.ColumnDefinitions>
-            <TextBox Name="ahihi" Grid.Row="0" Grid.ColumnSpan="2" BorderBrush="Red" BorderThickness="1" Margin="5"></TextBox>
+            <TextBox Name="txtMaSP" Grid.Row="0" Grid.ColumnSpan="2" 
+                     BorderBrush="Red" BorderThickness="1" Margin="5"
+                     KeyDown="txtMaSP_KeyDown"
+                     MaxLength="10"/>
+
             <Button Grid.Row="0" Grid.Column="3"
                     Click="Button_Click"
                     BorderBrush="Red" BorderThickness="1" Margin="5">Thêm</Button>
