--- a/YCBG_HeQtCSDL/YCBG_HeQtCSDL/ThemSanPhamYCBG.xaml
+++ b/YCBG_HeQtCSDL/YCBG_HeQtCSDL/ThemSanPhamYCBG.xaml
@@ -39,7 +39,7 @@
         <TextBlock Text="Số lượng" Grid.Column="2" Grid.Row="0" FontWeight="Bold"
                    VerticalAlignment="Center" HorizontalAlignment="Center"/>
         <TextBox Name="txtSoLuong" Grid.Column="2" Grid.Row="1"
-                 MaxLength="5"
+                 MaxLength="5" KeyDown="txtSoLuong_KeyDown"
                  PreviewTextInput="txtSoLuong_PreviewTextInput"
                     Margin="10" Background="Azure" Text="0"
                  BorderBrush="Red" BorderThickness="1"
@@ -49,12 +49,12 @@
                    BorderBrush="Red" BorderThickness="1"
                     Margin="10" Background="Azure"/>-->
 
-        <Button Grid.Row="1" Grid.Column="6" Name="btn_addCTYCBH"
-                Click="btn_addCTYCBH_Click"
+        <Button Grid.Row="1" Grid.Column="3" Name="btn_addCTYCBG"
+                Click="btn_addCTYCBG_Click"
                     BorderBrush="Red" BorderThickness="1" Margin="5">Thêm CTYCBG</Button>
         <!--1-->
-        <Button Grid.Row="3" Grid.Column="1" Name="btn_XoaCTYCBH"
-                Click="btn_XoaCTYCBH_Click"
+        <Button Grid.Row="3" Grid.Column="1" Name="btn_XoaCTYCBG"
+                Click="btn_XoaCTYCBG_Click"
                 BorderBrush="Red" BorderThickness="1" Margin="5">Xoá CTYCBG</Button>
         
         <Button Grid.Row="3" Grid.Column="5" Name="btn_addYCBG"
