--- a/YCBG_HeQtCSDL/YCBG_HeQtCSDL/main_YCBG.xaml
+++ b/YCBG_HeQtCSDL/YCBG_HeQtCSDL/main_YCBG.xaml
@@ -10,7 +10,8 @@
     <Grid>
         <Grid >
             <Grid.RowDefinitions>
-                <RowDefinition/>
+                <RowDefinition Height="0.5*"/>
+                <RowDefinition Height="0.8*"/>
                 <RowDefinition Height="6*"/>
                 <RowDefinition Height="0.5*"/>
             </Grid.RowDefinitions>
@@ -20,17 +21,18 @@
                 <ColumnDefinition Width="577*"/>
                 <ColumnDefinition Width="160*"/>
             </Grid.ColumnDefinitions>
-            <TextBox Name="txtMaSP" Grid.Row="0" Grid.ColumnSpan="2" 
+            <Label Content="Tìm theo YCBG:" FontSize="15" Grid.ColumnSpan="2"/>
+            <TextBox Name="txtMaSP" Grid.Row="1" Grid.ColumnSpan="2" 
                      BorderBrush="Red" BorderThickness="1" Margin="5"
                      KeyDown="txtMaSP_KeyDown"
                      MaxLength="10"/>
 
-            <Button Grid.Row="0" Grid.Column="3"
+            <Button Grid.Row="1" Grid.Column="3"
                     Click="Button_Click"
                     BorderBrush="Red" BorderThickness="1" Margin="5">Thêm</Button>
 
             <DataGrid Name="dtgYCBG"
-                        Grid.Row="1" Grid.ColumnSpan="4" 
+                        Grid.Row="2" Grid.ColumnSpan="4" 
                               ColumnWidth="*"
                               VerticalAlignment="Stretch"
                               HorizontalAlignment="Stretch"
