--- a/YCBG_HeQtCSDL/YCBG_HeQtCSDL/MainWindow.xaml
+++ b/YCBG_HeQtCSDL/YCBG_HeQtCSDL/MainWindow.xaml
@@ -9,57 +9,6 @@
         FontSize="16"
         Title="MainWindow" Height="600" Width="800">
     <Grid>
-        <TabControl   HorizontalAlignment="Left" Height="550" Margin="10,10,0,0" VerticalAlignment="Top" Width="774">
-            <TabItem Header="Chi tiết yêu cầu báo giá">
-                <Grid >
-                    <Grid.RowDefinitions>
-                        <RowDefinition />
-                        <RowDefinition/>
-                        <RowDefinition Height="6*"/>
-                        <RowDefinition Height="1*"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="160*"/>
-                        <ColumnDefinition Width="577*"/>
-                    </Grid.ColumnDefinitions>
-
-                    <TextBlock Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="0" Margin="45,15,77,14.2">Ngày</TextBlock>
-                    <Label Name="lbToDay" Grid.Column="1"></Label>
-                        <TextBlock Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="0" Margin="6,15.8,37,14.2">Người phụ trách</TextBlock>
-                    <DataGrid Name="dtgCtYCBG"
-                        Grid.Row="2" Grid.ColumnSpan="2" 
-                              ColumnWidth="*"
-                              VerticalAlignment="Stretch"
-                              HorizontalAlignment="Stretch"
-                              AutoGenerateColumns="False"
-                              EnableColumnVirtualization="False"
-                              EnableRowVirtualization="False"
-                              CanUserAddRows="False"
-
-                              SelectionMode="Single" Grid.RowSpan="1">
-                        <DataGrid.Columns>
-                            <DataGridTextColumn Header="#" IsReadOnly="True" Width="30" Binding="{Binding RelativeSource={RelativeSource AncestorType=DataGridRow}, Converter={local1:RowToIndexConverter}}"/>
-                            <DataGridTextColumn Header="Mã mặt hàng" IsReadOnly="True" Binding="{Binding MaSP}"/>
-                            <DataGridTextColumn Header="Tên mặt hàng" IsReadOnly="True" Binding="{Binding TenMatHang}"/>
-                            <DataGridTextColumn Header="Nhà cung cấp" IsReadOnly="True" Binding="{Binding TenNCC}"/>
-                            <DataGridTextColumn Header="Số lượng" IsReadOnly="False" Binding="{Binding SoLuong}"/>
-                            <DataGridTextColumn Header="Giá đã báo" IsReadOnly="True" Binding="{Binding DonGia}"/>
-                            <DataGridTextColumn Header="Ghi chú" IsReadOnly="True" Binding="{Binding GhiChu}"/>
-                        </DataGrid.Columns>
-                    </DataGrid>
-                    <Grid Grid.Row="3" Grid.ColumnSpan="3" Margin="10,10.4,9.8,9.6">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition/>
-                            <ColumnDefinition />
-                        </Grid.ColumnDefinitions>
-                        <Button Grid.Column="0" Width="100">Email</Button>
-                        <Button Grid.Column="1" Width="100">Dong</Button>
-                    </Grid>
-
-                </Grid>
-            </TabItem>
-
-        </TabControl>
-
+        <Frame x:Name="Main" NavigationUIVisibility="Hidden"/>
     </Grid>
 </Window>
