--- a/YCBG_HeQtCSDL/YCBG_HeQtCSDL/Pages/YCBaoGia.xaml
+++ b/YCBG_HeQtCSDL/YCBG_HeQtCSDL/Pages/YCBaoGia.xaml
@@ -1,14 +1,16 @@
-﻿<Window x:Class="YCBG_HeQtCSDL.main_YCBG"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:YCBG_HeQtCSDL"
-        xmlns:local1="clr-namespace:YCBG_HeQtCSDL.ViewModel"
-        mc:Ignorable="d"
-        Title="main_YCBG" Height="450" Width="800">
+﻿<Page x:Class="YCBG_HeQtCSDL.Pages.YCBaoGia"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:YCBG_HeQtCSDL.Pages"
+      xmlns:local1="clr-namespace:YCBG_HeQtCSDL.ViewModel"
+      mc:Ignorable="d" 
+      d:DesignHeight="450" d:DesignWidth="800"
+      Title="YCBaoGia">
+
     <Grid>
-        <Grid >
+        <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="0.5*"/>
                 <RowDefinition Height="0.8*"/>
@@ -49,14 +51,11 @@
                 </DataGrid.Resources>
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="#" IsReadOnly="True" Width="30" Binding="{Binding RelativeSource={RelativeSource AncestorType=DataGridRow}, Converter={local1:RowToIndexConverter}}"/>
-                    <DataGridTextColumn Header="Mã yêu cầu báo giá" IsReadOnly="True" Binding="{Binding MaYCBG}"/>
                     <DataGridTextColumn Header="Ngày" IsReadOnly="True" Binding="{Binding NgayYCBG}"/>
                     <DataGridTextColumn Header="Tình trạng" IsReadOnly="True" Binding="{Binding TinhTrang}"/>
                     <DataGridTextColumn Header="Nhân viên" IsReadOnly="True" Binding="{Binding MaNV}"/>
                 </DataGrid.Columns>
             </DataGrid>
         </Grid>
-
-        
     </Grid>
-</Window>
+</Page>
