--- a/YCBG_HeQtCSDL/YCBG_HeQtCSDL/MainWindow.xaml
+++ b/YCBG_HeQtCSDL/YCBG_HeQtCSDL/MainWindow.xaml
@@ -7,7 +7,8 @@
         xmlns:local1="clr-namespace:YCBG_HeQtCSDL.ViewModel"
         mc:Ignorable="d"
         FontSize="16"
-        Title="MainWindow" Height="600" Width="800">
+        Title="Main"
+        Height="600" Width="800">
     <Grid>
         <Frame x:Name="Main" NavigationUIVisibility="Hidden"/>
     </Grid>
