--- a/YCBG_HeQtCSDL/YCBG_HeQtCSDL/Pages/ThemMuaHang/ThemMoi.xaml
+++ b/YCBG_HeQtCSDL/YCBG_HeQtCSDL/Pages/ThemMuaHang/ThemMoi.xaml
@@ -1,14 +1,17 @@
-﻿<Window x:Class="YCBG_HeQtCSDL.ThemSanPhamYCBG"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:YCBG_HeQtCSDL"
-        xmlns:local1="clr-namespace:YCBG_HeQtCSDL.ViewModel"
-        mc:Ignorable="d"
-        Title="Thêm YCBG" Height="450" Width="800">
+﻿<Page x:Class="YCBG_HeQtCSDL.Pages.ThemMuaHang.ThemMoi"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:YCBG_HeQtCSDL.Pages.ThemMuaHang"
+      xmlns:local1="clr-namespace:YCBG_HeQtCSDL.ViewModel"
+      mc:Ignorable="d" 
+      d:DesignHeight="450" d:DesignWidth="800"
+      Title="ThemMoi">
+
     <Grid >
         <Grid.RowDefinitions>
+            <RowDefinition Height="0.2*"/>
             <RowDefinition Height="0.5*"/>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="6*"/>
@@ -24,45 +27,55 @@
             <ColumnDefinition Width="160*"/>
         </Grid.ColumnDefinitions>
         <!--0-->
-        <TextBlock Text="Sản phẩm" Grid.Column="0" Grid.Row="0" FontWeight="Bold"  
+        <TextBlock Text="Sản phẩm" Grid.Column="0" Grid.Row="1" FontWeight="Bold"  
                    VerticalAlignment="Center" HorizontalAlignment="Center"/>
-        <ComboBox Name="cboMaSP" Grid.Column="0" Grid.Row="1" Margin="10" 
+        <ComboBox Name="cboMaSP" Grid.Column="0" Grid.Row="2" Margin="10" 
                   SelectionChanged="cboMaSP_SelectionChanged"
                   SelectedIndex="{Binding indexCboSP}"/>
 
-        <TextBlock Text="Nhà cung cấp" Grid.Column="1" Grid.Row="0" FontWeight="Bold"
+        <TextBlock Text="Nhà cung cấp" Grid.Column="1" Grid.Row="1" FontWeight="Bold"
                    VerticalAlignment="Center" HorizontalAlignment="Center"/>
-        <ComboBox Name="cboMaNCC" Grid.Column="1" Grid.Row="1" Margin="10" 
+        <ComboBox Name="cboMaNCC" Grid.Column="1" Grid.Row="2" Margin="10" 
                   SelectionChanged="cboMaNCC_SelectionChanged"
                   SelectedIndex="{Binding indexCboNCC}"/>
 
-        <TextBlock Text="Số lượng" Grid.Column="2" Grid.Row="0" FontWeight="Bold"
+        <TextBlock Text="Số lượng" Grid.Column="2" Grid.Row="1" FontWeight="Bold"
                    VerticalAlignment="Center" HorizontalAlignment="Center"/>
-        <TextBox Name="txtSoLuong" Grid.Column="2" Grid.Row="1"
+        <TextBox Name="txtSoLuong" Grid.Column="2" Grid.Row="2"
                  MaxLength="5" KeyDown="txtSoLuong_KeyDown"
                  PreviewTextInput="txtSoLuong_PreviewTextInput"
                     Margin="10" Background="Azure" Text="1"
                  BorderBrush="Red" BorderThickness="1"
+                 xmlns:local1="clr-namespace:YCBG_HeQtCSDL.ViewModel"
                  />
+        
         <!--<TextBox Name="txtGhiChu" Grid.Column="3" Grid.Row="1"
                    Grid.ColumnSpan="2"
                    BorderBrush="Red" BorderThickness="1"
                     Margin="10" Background="Azure"/>-->
 
-        <Button Grid.Row="1" Grid.Column="3" Name="btn_addCTYCBG"
-                Click="btn_addCTYCBG_Click"
-                    BorderBrush="Red" BorderThickness="1" Margin="5">Thêm CTYCBG</Button>
+        <Button Grid.Row="2" Grid.Column="3" Name="btnThemMoiHD"
+                Click="btn_addCTYCBG_Click" 
+                BorderBrush="Red" BorderThickness="1" Margin="5">Thêm</Button>
+
+        <TextBlock Text="Tổng tiền" Grid.Column="5" Grid.Row="1" FontWeight="Bold"
+                   VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        <TextBox x:Name="txtTongTien" Text="0" IsEnabled="False"
+                 Grid.Column="5" Grid.Row="2" Margin="10px" FontWeight="Bold"
+                HorizontalContentAlignment="Right" VerticalContentAlignment="Center"
+                 Background="Wheat"/>
+
         <!--1-->
-        <Button Grid.Row="3" Grid.Column="1" Name="btn_XoaCTYCBG"
+        <Button Grid.Row="4" Grid.Column="1" Name="btn_XoaCTYCBG"
                 Click="btn_XoaCTYCBG_Click"
                 BorderBrush="Red" BorderThickness="1" Margin="5">Xoá CTYCBG</Button>
-        
-        <Button Grid.Row="3" Grid.Column="5" Name="btn_addYCBG"
+
+        <Button Grid.Row="4" Grid.Column="5" Name="btn_addYCBG"
                 Click="btn_addYCBG_Click" 
                 BorderBrush="Red" BorderThickness="1" Margin="5">Tạo</Button>
 
-        <DataGrid Name="dtgThemSanPhamYCBG"
-                        Grid.Row="2" Grid.ColumnSpan="6" 
+        <DataGrid Name="dtgThemHDMua"
+                        Grid.Row="3" Grid.ColumnSpan="6" 
                               ColumnWidth="*"
                               VerticalAlignment="Stretch"
                               HorizontalAlignment="Stretch"
@@ -70,13 +83,19 @@
                               EnableRowVirtualization="False"
                               AutoGenerateColumns="False"
                               CanUserAddRows="False" Margin="5"
-                              SelectionMode="Single" Grid.RowSpan="1">
+                              SelectionMode="Extended" Grid.RowSpan="1">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="#" IsReadOnly="True" Width="30" Binding="{Binding RelativeSource={RelativeSource AncestorType=DataGridRow}, Converter={local1:RowToIndexConverter}}"/>
                 <DataGridTextColumn Header="Tên sản phẩm" IsReadOnly="True" Binding="{Binding TenSanPham}"/>
                 <DataGridTextColumn Header="Nhà cung cấp" IsReadOnly="True" Binding="{Binding NhaCungCap}"/>
                 <DataGridTextColumn Header="Số lượng" IsReadOnly="True" Binding="{Binding SoLuong}"/>
+                <DataGridTextColumn Header="Tồn kho" IsReadOnly="True" Binding="{Binding Ton}"/>
+                <DataGridTextColumn Header="Giá bán" IsReadOnly="True" Binding="{Binding Gia, StringFormat='#,##;(#,##)'}"/>
             </DataGrid.Columns>
         </DataGrid>
+
+        <Button Grid.Row="4" Grid.Column="0" Name="btn_Huy"
+                Click="btn_Huy_Click" 
+                BorderBrush="Red" BorderThickness="1" Margin="5">Huỷ</Button>
     </Grid>
-</Window>
+</Page>
