--- a/YCBG_HeQtCSDL/YCBG_HeQtCSDL/Pages/login.xaml
+++ b/YCBG_HeQtCSDL/YCBG_HeQtCSDL/Pages/login.xaml
@@ -6,11 +6,12 @@
       xmlns:local="clr-namespace:YCBG_HeQtCSDL.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="login">
+      WindowTitle="Đăng nhập"
+      Title="Đăng nhập">
 
     <Grid x:Name="gridLogin" KeyDown="password_KeyDown">
         <TextBox Text="nghi" Name="username" HorizontalAlignment="Left" Height="23" Margin="357,125,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" MaxLength="50" KeyDown="password_KeyDown"/>
         <PasswordBox  Password="123" Name="password" HorizontalAlignment="Left" Height="23" Margin="357,177,0,0" VerticalAlignment="Top" Width="120" MaxLength="50" KeyDown="password_KeyDown"/>
-        <Button Name="btnLogin" Content="Login" HorizontalAlignment="Left" Margin="375,229,0,0" VerticalAlignment="Top" Width="75" Click="Login_Click"/>
+        <Button Name="btnLogin" Content="Đăng nhập" HorizontalAlignment="Left" Margin="375,229,0,0" VerticalAlignment="Top" Width="75" Click="Login_Click"/>
     </Grid>
 </Page>
