--- a/YCBG_HeQtCSDL/YCBG_HeQtCSDL/Pages/DonMuaHang.xaml
+++ b/YCBG_HeQtCSDL/YCBG_HeQtCSDL/Pages/DonMuaHang.xaml
@@ -22,10 +22,10 @@
             <ColumnDefinition Width="577*"/>
             <ColumnDefinition Width="160*"/>
         </Grid.ColumnDefinitions>
-        <Label Content="Tìm đơn mua hàng:" FontSize="15" Grid.ColumnSpan="2"/>
-        <TextBox Name="txtMaSP" Grid.Row="1" Grid.ColumnSpan="2" 
+        <Label Content="Tìm theo nhân viên:" FontSize="15" Grid.ColumnSpan="2"/>
+        <TextBox Name="txtMaNV" Grid.Row="1" Grid.ColumnSpan="2" 
                      BorderBrush="Red" BorderThickness="1" Margin="5"
-                     KeyDown="txtMaSP_KeyDown"
+                     KeyDown="txtMaNV_KeyDown"
                      MaxLength="10"/>
 
         <Button Grid.Row="1" Grid.Column="3" Name="btnThemMuaHang"
