--- a/YCBG_HeQtCSDL/YCBG_HeQtCSDL/Pages/ThemMuaHang/ThemTuKHMua.xaml
+++ b/YCBG_HeQtCSDL/YCBG_HeQtCSDL/Pages/ThemMuaHang/ThemTuKHMua.xaml
@@ -4,11 +4,52 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:YCBG_HeQtCSDL.Pages.ThemMuaHang"
+      xmlns:local1="clr-namespace:YCBG_HeQtCSDL.ViewModel"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ThemTuKHMua">
 
     <Grid>
-        <Label Content="ThemTuKHMua"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0.5*"/>
+            <RowDefinition Height="0.8*"/>
+            <RowDefinition Height="6*"/>
+            <RowDefinition Height="0.5*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="160*"/>
+            <ColumnDefinition Width="160*"/>
+            <ColumnDefinition Width="577*"/>
+            <ColumnDefinition Width="160*"/>
+        </Grid.ColumnDefinitions>
+        <Label Content="Tìm theo Mã Nhân Viên:" FontSize="15" Grid.ColumnSpan="2"/>
+        <TextBox Name="txtMaNV" Grid.Row="1" Grid.ColumnSpan="2" 
+                     BorderBrush="Red" BorderThickness="1" Margin="5"
+                     KeyDown="txtMaNV_KeyDown"
+                     MaxLength="10"/>
+
+        <Button Grid.Row="1" Grid.Column="3"
+                    Name="btnChon" Click="btnChon_Click"
+                    BorderBrush="Red" BorderThickness="1" Margin="5">Chọn</Button>
+
+        <DataGrid Name="dtgKHMua"
+                        Grid.Row="2" Grid.ColumnSpan="4" 
+                              ColumnWidth="*"
+                              VerticalAlignment="Stretch"
+                              HorizontalAlignment="Stretch"
+                              AutoGenerateColumns="False"
+                              EnableColumnVirtualization="False"
+                              EnableRowVirtualization="False"
+                              CanUserAddRows="False"
+                              Margin="5" MouseDoubleClick="dtgKHMua_MouseDoubleClick"
+                              SelectionMode="Single" Grid.RowSpan="1">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="#" IsReadOnly="True" Width="30" Binding="{Binding RelativeSource={RelativeSource AncestorType=DataGridRow}, Converter={local1:RowToIndexConverter}}"/>
+                <DataGridTextColumn Header="Mã nhân viên" IsReadOnly="True" Binding="{Binding MaNV}"/>
+                <DataGridTextColumn Header="Ngày bắt đầu KH" IsReadOnly="True" Binding="{Binding NgayBatDauKeHoach}"/>
+                <DataGridTextColumn Header="Định kỳ ngày mua" IsReadOnly="True" Binding="{Binding DinhKyNgayMua}"/>
+            </DataGrid.Columns>
+        </DataGrid>
+        <Button x:Name="btnBack" Click="btnBack_Click" Grid.Column="0" Grid.Row="3" Content="Back"/>
     </Grid>
 </Page>
