--- a/YCBG_HeQtCSDL/YCBG_HeQtCSDL/Pages/YCBaoGia.xaml
+++ b/YCBG_HeQtCSDL/YCBG_HeQtCSDL/Pages/YCBaoGia.xaml
@@ -24,10 +24,12 @@
                 <ColumnDefinition Width="160*"/>
             </Grid.ColumnDefinitions>
             <Label Content="Tìm theo YCBG:" FontSize="15" Grid.ColumnSpan="2"/>
-            <TextBox Name="txtMaSP" Grid.Row="1" Grid.ColumnSpan="2" 
+            <!--<TextBox Name="txtMaSP" Grid.Row="1" Grid.ColumnSpan="2" 
                      BorderBrush="Red" BorderThickness="1" Margin="5"
                      KeyDown="txtMaSP_KeyDown"
-                     MaxLength="10"/>
+                     MaxLength="10"/>-->
+            <DatePicker Name="dateSearch" Grid.Row="1" Grid.ColumnSpan="2" 
+                        Margin="5" SelectedDateChanged="dateSearch_SelectedDateChanged"/>
 
             <Button Grid.Row="1" Grid.Column="3"
                     Click="Button_Click"
