--- a/YCBG_HeQtCSDL/YCBG_HeQtCSDL/Pages/login.xaml
+++ b/YCBG_HeQtCSDL/YCBG_HeQtCSDL/Pages/login.xaml
@@ -10,7 +10,7 @@
       Title="Đăng nhập">
 
     <Grid x:Name="gridLogin" KeyDown="password_KeyDown">
-        <TextBox Text="nghi" Name="username" HorizontalAlignment="Left" Height="23" Margin="357,125,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" MaxLength="50" KeyDown="password_KeyDown"/>
+        <TextBox Text="qlmuahang_duy" Name="username" HorizontalAlignment="Left" Height="23" Margin="357,125,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" MaxLength="50" KeyDown="password_KeyDown"/>
         <PasswordBox  Password="123" Name="password" HorizontalAlignment="Left" Height="23" Margin="357,177,0,0" VerticalAlignment="Top" Width="120" MaxLength="50" KeyDown="password_KeyDown"/>
         <Button Name="btnLogin" Content="Đăng nhập" HorizontalAlignment="Left" Margin="375,229,0,0" VerticalAlignment="Top" Width="75" Click="Login_Click"/>
     </Grid>
