--- a/YCBG_HeQtCSDL/YCBG_HeQtCSDL/Pages/ThemMuaHang/infoKHMua.xaml
+++ b/YCBG_HeQtCSDL/YCBG_HeQtCSDL/Pages/ThemMuaHang/infoKHMua.xaml
@@ -45,7 +45,7 @@
                               SelectionMode="Single" >
             <DataGrid.Columns>
                 <DataGridTextColumn Header="#" IsReadOnly="True" Width="30" Binding="{Binding RelativeSource={RelativeSource AncestorType=DataGridRow}, Converter={local1:RowToIndexConverter}}"/>
-                <DataGridTextColumn Header="Mã nhà cung cấp" IsReadOnly="True" Binding="{Binding MaNCC}"/>
+                <DataGridTextColumn Header="Mã Nhà phân phối" IsReadOnly="True" Binding="{Binding MaNPP}"/>
                 <DataGridTextColumn Header="Mã sản phẩm" IsReadOnly="True" Binding="{Binding TenSP}"/>
                 <DataGridTextColumn Header="Số lượng" IsReadOnly="True" Binding="{Binding SLMua}"/>
             </DataGrid.Columns>
