--- a/YCBG_HeQtCSDL/YCBG_HeQtCSDL/Pages/ThemMuaHang/infoYCBG.xaml
+++ b/YCBG_HeQtCSDL/YCBG_HeQtCSDL/Pages/ThemMuaHang/infoYCBG.xaml
@@ -51,7 +51,7 @@
             </DataGrid.Resources>
             <DataGrid.Columns>
                 <DataGridTextColumn Header="#" IsReadOnly="True" Width="30" Binding="{Binding RelativeSource={RelativeSource AncestorType=DataGridRow}, Converter={local1:RowToIndexConverter}}"/>
-                <DataGridTextColumn Header="Mã nhà cung cấp" IsReadOnly="True" Binding="{Binding NhaCungCap}"/>
+                <DataGridTextColumn Header="Mã Nhà phân phối" IsReadOnly="True" Binding="{Binding NhaPhanPhoi}"/>
                 <DataGridTextColumn Header="Tên sản phẩm" IsReadOnly="True" Binding="{Binding TenSanPham}"/>
                 <DataGridTextColumn Header="Số lượng" IsReadOnly="True" Binding="{Binding SoLuong}"/>
                 <DataGridTextColumn Header="Giá đã báo" IsReadOnly="True" Binding="{Binding GiaDaBao, StringFormat='#,##;(#,##)'}"/>
