--- a/YCBG_HeQtCSDL/YCBG_HeQtCSDL/Pages/infoDonMua.xaml
+++ b/YCBG_HeQtCSDL/YCBG_HeQtCSDL/Pages/infoDonMua.xaml
@@ -71,7 +71,7 @@
                               SelectionMode="Single" >
             <DataGrid.Columns>
                 <DataGridTextColumn Header="#" IsReadOnly="True" Width="30" Binding="{Binding RelativeSource={RelativeSource AncestorType=DataGridRow}, Converter={local1:RowToIndexConverter}}"/>
-                <DataGridTextColumn Header="Nhà cung cấp" IsReadOnly="True" Binding="{Binding MaNCC}"/>
+                <DataGridTextColumn Header="Nhà phân phối" IsReadOnly="True" Binding="{Binding MaNPP}"/>
                 <DataGridTextColumn Header="Tên sản phẩm" IsReadOnly="True" Binding="{Binding TenSP}"/>
                 <DataGridTextColumn Header="Số lượng" IsReadOnly="True" Binding="{Binding SoLuong}"/>
                 <DataGridTextColumn Header="Giá" IsReadOnly="True" Binding="{Binding Gia, StringFormat='#,##;(#,##)'}"/>
