--- a/YCBG_HeQtCSDL/YCBG_HeQtCSDL/ThemSanPhamYCBG.xaml
+++ b/YCBG_HeQtCSDL/YCBG_HeQtCSDL/ThemSanPhamYCBG.xaml
@@ -30,10 +30,10 @@
                   SelectionChanged="cboMaSP_SelectionChanged"
                   SelectedIndex="{Binding indexCboSP}"/>
 
-        <TextBlock Text="Nhà cung cấp" Grid.Column="1" Grid.Row="0" FontWeight="Bold"
+        <TextBlock Text="Nhà phân phối" Grid.Column="1" Grid.Row="0" FontWeight="Bold"
                    VerticalAlignment="Center" HorizontalAlignment="Center"/>
-        <ComboBox Name="cboMaNCC" Grid.Column="1" Grid.Row="1" Margin="10" 
-                  SelectionChanged="cboMaNCC_SelectionChanged"
+        <ComboBox Name="cboMaNPP" Grid.Column="1" Grid.Row="1" Margin="10" 
+                  SelectionChanged="cboMaNPP_SelectionChanged"
                   SelectedIndex="{Binding indexCboNCC}"/>
 
         <TextBlock Text="Số lượng" Grid.Column="2" Grid.Row="0" FontWeight="Bold"
@@ -74,7 +74,7 @@
             <DataGrid.Columns>
                 <DataGridTextColumn Header="#" IsReadOnly="True" Width="30" Binding="{Binding RelativeSource={RelativeSource AncestorType=DataGridRow}, Converter={local1:RowToIndexConverter}}"/>
                 <DataGridTextColumn Header="Tên sản phẩm" IsReadOnly="True" Binding="{Binding TenSanPham}"/>
-                <DataGridTextColumn Header="Nhà cung cấp" IsReadOnly="True" Binding="{Binding NhaCungCap}"/>
+                <DataGridTextColumn Header="Nhà phân phối" IsReadOnly="True" Binding="{Binding NhaPhanPhoi}"/>
                 <DataGridTextColumn Header="Số lượng" IsReadOnly="True" Binding="{Binding SoLuong}"/>
             </DataGrid.Columns>
         </DataGrid>
