--- a/YCBG_HeQtCSDL/YCBG_HeQtCSDL/list_CTYCBG.xaml
+++ b/YCBG_HeQtCSDL/YCBG_HeQtCSDL/list_CTYCBG.xaml
@@ -18,20 +18,29 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="160*"/>
                 <ColumnDefinition Width="160*"/>
-                <ColumnDefinition Width="577*"/>
+                <ColumnDefinition Width="160*"/>
+                <ColumnDefinition Width="160*"/>
                 <ColumnDefinition Width="160*"/>
             </Grid.ColumnDefinitions>
-            <Label Content="Tìm theo YCBG:" FontSize="15" Grid.ColumnSpan="2"/>
-            <TextBox Name="txtMaSP" Grid.Row="1" Grid.ColumnSpan="2" 
-                     BorderBrush="Red" BorderThickness="1" Margin="5"
-                     MaxLength="10"/>
 
-            <Button Grid.Row="1" Grid.Column="3"
-                    
-                    BorderBrush="Red" BorderThickness="1" Margin="5">Thêm</Button>
+            <Button Grid.Row="1" Grid.Column="4"
+                    Click="btnLuu_Click"
+                    Name="btnLuu"
+                    BorderBrush="Red" 
+                    BorderThickness="1" 
+                    Margin="5"
+                    Content="Lưu"/>
+
+            <Button Grid.Row="1" Grid.Column="0"
+                    Click="btnGui_Click"
+                    Name="btnGui"
+                    BorderBrush="Red" 
+                    BorderThickness="1" 
+                    Margin="5"
+                    Content="Gửi"/>
 
             <DataGrid Name="dtgList_YCBG"
-                        Grid.Row="2" Grid.ColumnSpan="4" 
+                        Grid.Row="2" Grid.ColumnSpan="5" 
                               ColumnWidth="*"
                               VerticalAlignment="Stretch"
                               HorizontalAlignment="Stretch"
@@ -48,11 +57,10 @@
                 </DataGrid.Resources>
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="#" IsReadOnly="True" Width="30" Binding="{Binding RelativeSource={RelativeSource AncestorType=DataGridRow}, Converter={local1:RowToIndexConverter}}"/>
-                    <DataGridTextColumn Header="Mã nhà cung cấp" IsReadOnly="True" Binding="{Binding NhaCungCap}"/>
+                    <DataGridTextColumn Header="Mã nhà phân phối" IsReadOnly="True" Binding="{Binding NhaPhanPhoi}"/>
                     <DataGridTextColumn Header="Tên sản phẩm" IsReadOnly="True" Binding="{Binding TenSanPham}"/>
                     <DataGridTextColumn Header="Số lượng" IsReadOnly="True" Binding="{Binding SoLuong}"/>
                     <DataGridTextColumn Header="Giá đã báo" IsReadOnly="True" Binding="{Binding GiaDaBao, StringFormat='#,##;(#,##)'}"/>
-                    <DataGridTextColumn Header="Tình trạng" IsReadOnly="True" Binding="{Binding TinhTrang}"/>
                 </DataGrid.Columns>
             </DataGrid>
         </Grid>
